--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="icons">
         <!-- fontawesome icons -->
         <i class="fas fa-3x fa-step-backward" id="previous"></i>
-        <i class="far songItemPlay fa-3x fa-play-circle" id="masterPlay"></i>
+        <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
         <i class="fas fa-3x fa-step-forward" id="next"></i>
       </div>
       <div class="songInfo">
