--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Best of MUSIC- No Copyright Sound</h1>
         <div class="songItemContainer">
           <div class="songItem">
-            <img src="./covers/1.jpg" alt="1" />
+            <img src="./covers/1.jpg" alt="1" class="bgimage" />
             <span class="songName">Gangster Paradise</span>
             <span class="songlisplay"
               ><span class="timestamp"
